@@ -2,8 +2,8 @@ Package: spaMM
 Type: Package
 Title: Mixed Models, Particularly Spatial GLMMs
 Encoding: UTF-8
-Version: 1.7.1
-Date: 2016-01-21
+Version: 1.7.2
+Date: 2016-01-23
 Authors@R: c(person("François", "Rousset", role = c("aut", "cre", "cph"),
                      email = "francois.rousset@univ-montp2.fr"),
               person("Jean-Baptiste", "Ferdy", role = c("aut","cph")),
@@ -17,14 +17,14 @@ LinkingTo: Rcpp, RcppEigen
 Suggests: maps, testthat, lme4, rsae, ff, rasterVis, rgdal
 Depends: R (>= 3.0.0)
 NeedsCompilation: yes
-Description: Inference in mixed models, including GLMMs with spatial correlations and models with non-Gaussian random effects (e.g., Beta Binomial, or negative-binomial mixed models). Heteroskedasticity can further be fitted by a linear model. The algorithms are currently various Laplace approximations methods for ML or REML, in particular h-likelihood and penalized-likelihood methods.  
+Description: Inference in mixed models, including GLMMs with spatial correlations and models with non-Gaussian random effects (e.g., Beta Binomial, or negative-binomial mixed models). Heteroscedasticity can further be fitted by a linear model. The algorithms are currently various Laplace approximations methods for ML or REML, in particular h-likelihood and penalized-likelihood methods.  
 License: CeCILL-2
 URL: http://www.r-project.org,
         http://kimura.univ-montp2.fr/~rousset/spaMM.htm
-Packaged: 2016-01-20 23:53:28 UTC; rousset
+Packaged: 2016-01-25 08:24:33 UTC; rousset
 Author: François Rousset [aut, cre, cph],
   Jean-Baptiste Ferdy [aut, cph],
   Alexandre Courtiol [ctb],
   GSL authors [ctb] (src/gsl_bessel.*)
 Repository: CRAN
-Date/Publication: 2016-01-21 17:57:49
+Date/Publication: 2016-01-26 00:11:39
